--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ ul {
     max-width: 1240px;
     margin: 0 auto;
     padding-right: 20px;
-    outline: 20px;
+    padding-left: 20px;
 }
 
 body {
@@ -50,6 +50,10 @@ body {
 }
 
 .menu {}
+
+.menu__btn {
+    display: none;
+}
 
 .menu__list {
     display: flex;
@@ -120,3 +124,79 @@ body {
     max-width: 704px;
     margin: 150px auto;
 }
+
+@media (max-width: 1000px) {
+    .user-actions__link-serch {
+        margin-left: 30px;
+    }
+
+    .menu {
+        margin-right: auto;
+    }
+
+    .menu__list {
+        margin-right: 60px;
+    }
+
+    .logo {
+        margin-bottom: 0;
+    }
+
+    .header__inner {
+        min-height: auto;
+    }
+
+    .blockquote__text {
+        margin: 135px auto 120px;
+    }
+}
+
+@media (max-width: 860px) {
+    .menu__list {
+        display: none;
+    }
+    .menu__btn {
+        display: flex;
+        width: 40px;
+        height: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: transparent;
+        border: none;
+        outline: none;
+    }
+
+    .menu__btn span{ 
+        background-color: #000;
+        height: 2px;
+        width: 100%;
+    }
+
+    .menu {
+        order: -1;
+        margin-right: 0;
+        margin-left: 0;
+    }
+
+    .logo {
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+}
+
+@media (max-width: 768px) {
+    .header__inner {
+        padding-right: 44px;
+        padding-left: 44px;
+    }
+
+    .blockquote__text {
+        max-width: 640px;
+        font-size: 38px;
+    }
+}
+
+@media (max-width: 480px) {}
+
+@media (max-width: 360px) {}
