--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ body {
     .menu__list {
         display: none;
     }
+
     .menu__btn {
         display: flex;
         width: 40px;
@@ -166,7 +167,7 @@ body {
         outline: none;
     }
 
-    .menu__btn span{ 
+    .menu__btn span {
         background-color: #000;
         height: 2px;
         width: 100%;
@@ -195,8 +196,86 @@ body {
         max-width: 640px;
         font-size: 38px;
     }
+
+    .user-actions__link-serch {
+        margin-left: 0px;
+    }
+
 }
 
-@media (max-width: 480px) {}
+@media (max-width: 680px) {
+    .container {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 
-@media (max-width: 360px) {}
+    .header__inner {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+
+    .top__title {
+        font-size: 40px;
+        line-height: normal;
+    }
+
+    
+
+    .blockquote__text {
+        font-size: 16px;
+        max-width: 376px;
+        margin: 60px auto 60px;
+    }
+}
+
+@media (max-width: 480px) {
+    .logo {
+        margin-right: 80px;
+    }
+
+    .logo img {
+        width: 40px;
+    }
+
+    .user-actions__link-serch {
+        margin-left: 30px;
+    }
+
+    .top__inner {
+        min-height: 500px;
+    }
+}
+
+@media (max-width: 360px) {
+    .user-actions__link-serch {
+        margin-left: 0px;
+    }
+
+    .blockquote__text {
+        max-width: 340px;
+        margin-top: 70px;
+        margin-bottom: 80px;
+    }
+
+    .logo {
+        margin-right: 50px;
+    }
+
+    .header__inner {
+        padding: 10px 0;
+    }
+
+    .top__title {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .top__text {
+        font-size: 13px;
+        margin-bottom: 30px;
+    }
+
+    .top__inner {
+        min-height: 367px;
+    }
+}
