--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
     font-size: 20px;
     font-weight: 300;
     line-height: 1.5;
+    position: relative;
     /* font-family: "Cormorant", serif; */
 }
 
@@ -59,11 +60,29 @@ body {
 
 .menu {}
 
+.menu--close {
+    display: none;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 1;   
+    transition: background-color 0.3s ease; 
+    height: 120vh;
+}
+
+.menu--close.menu--open {
+    display: block;
+}
+
 .menu__btn {
     display: none;
 }
 
-.mobile-nav, .menu__close {
+.mobile-nav,
+.menu__close {
     display: none;
 }
 
@@ -75,6 +94,8 @@ body {
     font-weight: 400;
     font-size: 18px;
     margin-left: 85px;
+    position: relative;
+    z-index: 3;
 }
 
 .menu__item {}
@@ -165,18 +186,24 @@ body {
 
 @media (max-width: 860px) {
     .menu__list {
+        transform: translateY(-100%);
+        transition: 0.6s all ease-in;
         position: absolute;
         left: 0;
         right: 0;
         top: 0;
         bottom: 0;
-        width: 360px;
+        width: 480px;
         height: max-content;
         margin: 0 auto;
         background-color: #fff;
         display: block;
         text-align: center;
         padding-top: 60px;
+    }
+
+    .menu__list.menu__list--open {
+        transform: translateY(0);
     }
 
     .menu__close-btn {
@@ -193,7 +220,8 @@ body {
         font-family: "Cormorant", serif;
     }
 
-    .mobile-nav, .menu__close {
+    .mobile-nav,
+    .menu__close {
         display: block;
     }
 
@@ -225,6 +253,8 @@ body {
         background-color: transparent;
         border: none;
         outline: none;
+        z-index: 2;
+        position: relative;
     }
 
     .menu__btn span {
@@ -303,6 +333,11 @@ body {
 
     .top__inner {
         min-height: 500px;
+    }
+
+    .menu__list {
+        max-width: 360px;
+        width: 100%;
     }
 }
 
