--- a/css/style.css
+++ b/css/style.css
@@ -246,32 +246,139 @@ body {
 .main-block__item-link {
     display: block;
     font-size: 13px;
+    position: relative;
 }
 
-.main-blog__link {}
+.main-block__item-link::after {
+    content: '';
+    background-image: url(../images/arrow.svg);
+    position: absolute;
+    width: 5px;
+    height: 10px;
+    margin-left: 8px;
+    bottom: 3px;
+}
+
+.main-blog__link {
+    display: flex;
+    justify-content: center;
+    border: 1px solid rgb(21, 22, 24);
+    background: rgb(255, 255, 255);
+    font-family: "Open Sans", serif;
+    font-size: 20px;
+    font-weight: 300;
+    max-width: 150px;
+    width: 100%;
+    padding: 12px 41px;
+    margin: 72px auto 0px;
+}
 
 
 .main-list {
-    background-color: #ffaaff;
+    padding: 100px 0px;
+    background-color: #F7F2EA;
+    background-image: url(../images/bg-main.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
 }
 
-.title {}
+.main-list__title {
+    text-align: left;
+    margin-bottom: 50px;
+}
 
-.main-list__inner {}
+.main-list__inner {
+    display: flex;
+    gap: 60px 40px;
+}
 
-.main-list__text {}
+.main-list__text {
+    font-family: "Open Sans", serif;
+    font: 20px;
+    font-weight: 300;
+    line-height: 1.5;
+}
 
-.main-list__form {}
+.main-list__form {
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-basis: 580px; */
+}
 
-.main-list__email {}
+.main-list__email {
+    border: none;
+    border-bottom: 1px solid #B8B58B;
+    background-color: transparent;
+    padding: 3px 15px;
+    width: 405px;
+    margin-right: 25px;
+    outline: none;
+    color: #151618;
+    font-family: "Open Sans", serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.5;
+}
 
-.main-list__btn {}
+.main-list__email::placeholder {
+    color: #B8B58B;
+    font-family: "Open Sans", serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.5;
+}
 
-.checkbox {}
+.main-list__btn {
+    font-family: "Open Sans", serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 27px;
+    padding: 12px 34px;
+    border: 1px solid rgb(21, 22, 24);
+    background: #fff;
+    cursor: pointer;
+}
 
-.checkbox-style {}
+.checkbox {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
+    padding-left: 20px;
+    margin-top: 5px;
+}
 
-.checkbox__text {}
+.checkbox-style {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #151618;
+    margin-top: 5px;
+    background-color: #fff;
+    
+}
+
+.checkbox:checked + .checkbox-style::before {
+    position: absolute;
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    background-color: #151618;
+    top: 1px;
+    left: 1px;
+}
+
+.main-block__label {
+    margin-top: 16px;
+}
+
+.checkbox__text {
+    font-size: 13px;
+    padding-left: 20px;
+}
 
 .prioritiss {}
 
