--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,20 @@ html {
     box-sizing: inherit;
 }
 
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex-grow: 1;
+}
+
 button {
     outline: none;
     border: none;
@@ -538,7 +552,9 @@ body {
 
 .footer__social-item {}
 
-.footer__social-link {}
+.footer__social-link {
+    display: grid;
+}
 
 .footer__bottom {
     display: flex;
@@ -555,7 +571,9 @@ body {
     gap: 0px 20px;
 }
 
-.partnaers-logo__item {}
+.partnaers-logo__item {
+    display: grid;
+}
 
 
 
@@ -686,6 +704,38 @@ body {
 
     .reviews__item.reviews__item--hide {
         display: none;
+    }
+
+    .footer__blockquote {
+        width: 270px;
+    }
+
+    .footer__blockquote-text {
+        margin-top: 0;
+    }
+
+    .footer__inner {
+        margin-bottom: 55px;
+    }
+
+    .footer__products {
+        width: 84px;
+    }
+
+    .footer__company {
+        width: 156px;
+    }
+
+    .footer__copy {
+        margin-right: 40px;
+    }
+
+    .footer__nav-logo {
+        margin-right: 30px;
+    }
+
+    .footer__contacts {
+        width: 270px;
     }
 }
 
@@ -854,6 +904,24 @@ body {
         flex-direction: column;
     }
 
+    .footer__inner {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .footer__products {
+        grid-row: span 3;
+    }
+
+    .footer__company {
+        grid-row: span 3;
+    }
+
+    .footer__contacts {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
 }
 
 @media (max-width: 680px) {
@@ -875,6 +943,10 @@ body {
         font-size: 16px;
         max-width: 376px;
         margin: 60px auto 60px;
+    }
+
+    .footer {
+        padding: 50px 0 20px;
     }
 }
 
@@ -1011,6 +1083,73 @@ body {
         gap: 50px 0px;
     }
 
+    .footer__inner {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0px;
+    }
+
+    .footer__products {
+        max-width: 47%;
+        width: 100%;
+    }
+
+    .footer__company {
+        max-width: 47%;
+        width: 100%;
+    }
+
+    .footer__blockquote {
+        max-width: 100%;
+        width: 100%;
+        margin-top: 50px;
+    }
+
+    .footer__blockquote-text {
+        margin-bottom: 10px;
+    }
+
+    .footer__blockquote-author span {
+        display: inline-block;
+    }
+
+    .footer__contacts {
+        margin-top: 50px;
+        max-width: 100%;
+        width: 100%;
+        text-align: center;
+    }
+
+    .footer__contacts-title {
+        margin-bottom: 20px;
+    }
+
+    .footer__nav {
+        flex-wrap: nowrap;
+    }
+
+    .footer__nav-logo {
+        margin-right: 20px;
+    }
+
+    .footer__social {
+        margin-top: 35px;
+        margin-left: 20px;
+    }
+
+    .footer__copy {
+        margin-right: 0;
+    }
+
+    .footer__bottom {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .footer__products-title, .footer__company-title {
+        margin-bottom: 30px;
+    }
+
 }
 
 @media (max-width: 440px) {
@@ -1138,5 +1277,18 @@ body {
 
     .main-list__email {
         max-width: 200px;
+    }
+
+    .footer__blockquote {
+        margin-top: 40px;
+    }
+
+    .footer__contacts {
+        margin-top: 40px;
+    }
+    
+    .footer__nav {
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
